@@ -51,8 +51,11 @@ Release @version@-@release@ Start 11/09/2023 End --/--/----
 - 30/09/2023
 41. svctool: added --chksender option to enable CHECKSENDER
 42. qmail-lspawn.c: skip setuser_privileges for non-etc-passwd users
-- 01/10/2023
-43. autoresponder.c: decode SRS return path address
+- 02/10/2023
+43. smtpd.c: Fix (double) error message for unsupported AUTH method
+44. smtpd.c: Fix SEGV when decoding SRS recipient address
+45. svctool: make QmailHOME, INDIMAILDIR configurable through env variable
+46. autoresponder.c: decode SRS return path address
 
 * Fri Sep 08 2023 11:58:03 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.4-1.1%{?dist}
 Release 3.0.4-1.1 Start 24/04/2023 End 08/09/2023
